fix issue with slider on mobile where buttons don't work due to hidden li

--- a/assets/section-main-product.css
+++ b/assets/section-main-product.css
@@ -374,7 +374,6 @@ a.product__text {
   }
 }
 
-@media screen and (min-width: 750px) {
   .product__media-item--variant {
     display: none;
   }
@@ -382,7 +381,6 @@ a.product__text {
   .product__media-item--variant:first-child {
     display: block;
   }
-}
 
 .product__media-icon .icon {
   width: 1.2rem;
